--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-react": "^7.21.5",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-close-on-escape": "^3.0.0",
     "react-dom": "^17.0.1",
